finished hw --WB

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Basics</title>
     <script src="js/main.js"></script>
+    <script src="js/hw.js"></script>
 </head>
 <body>
     <h1>Javascript Basics</h1>
